--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@auth/prisma-adapter": "^1.3.3",
     "@prisma/client": "^5.9.1",
     "next": "14.1.0",
-    "next-auth": "^4.24.5",
+    "next-auth": "^5.0.0-beta.9",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.22.4",
