--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "next-auth": "^5.0.0-beta.11",
     "react": "^18",
     "react-dom": "^18",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
